# posterior-guided-dr

./: .gitattributes  .gitignore  README.md  active_sysid.md  plot_roll_correction.py  proposal.tex  pyproject.toml  requirements_tacc.txt  run_eval.py  run_fim_analysis.py  run_sysid.py  run_sysid_pipeline.py  run_train.py  visualize_policy.py
isaac_utils/: pyproject.toml
isaac_utils/isaac_utils/: rotations.py
pgdr/: __init__.py  _ppo.py  evaluate.py  excitation.py  model_utils.py  notes_on_existing_dr.md  param_space.py  pgdr_randomizer.py  plotting.py  run_all.sh  sensitivity.py  sysid.py  t1_env.py  train_all_conditions.py
pgdr/checkpoints/: training_summary.json
pgdr/checkpoints/20260402_175132_smoke_smoke/: training_summary.json
pgdr/config/: sysid_config.yaml  sysid_config_demo.yaml  sysid_config_fast.yaml  sysid_config_medium.yaml  sysid_config_micro.yaml  sysid_config_smoke.yaml  train_config.yaml  train_config_fast.yaml  train_config_smoke.yaml
pgdr/data/: sim_a_params.npy
pgdr/results/: Sigma.npy  calibration.json  eval_results.json  excitation_opt_history.json  excitation_params.json  identification_summary.json  p_star.npy  p_true.npy  p_true_sweep.json  param_sweep.json  param_sweep_scaled100.json  robustness_sweep.json  sensitivity.json  sysid_info.json  transfer_test.json
pgdr/tacc/: 1_sysid.sh  2_train.sh  3_eval.sh  setup_env.sh  submit_all.sh
pgdr/test/: live_viewer.py  plot_rollout.py  visualize_onnx_policy.py
scripts/: eval.py  mass_landscape.py  mass_opt.py  run_pgdr_end_to_end.py
scripts/config/: all.yaml  jump.yaml  sine.yaml  stand.yaml  walk.yaml
scripts/data/: common.py  jump.py  sine.py  stand.py  walk.py
spigym/: eval_agent.py  run_active_sysid.py  train_agent.py
spigym/config/: base.yaml  base_eval.yaml
spigym/envs/: downstream_tasks.md
spigym/utils/: common.py  config_utils.py  helpers.py  math.py  plotting.py  torch_utils.py
(+303 files in other folders)
