[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgdr"
version = "0.1.0"
description = "PGDR: Posterior-Guided Domain Randomization via Sampling-Based System Identification"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  # Core scientific
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "matplotlib>=3.8.0",
  # JAX / MuJoCo stack
  "jax>=0.4.20",
  "flax>=0.8.0",
  "optax>=0.2.0",
  "mujoco>=3.1.0",
  "mujoco-mjx>=3.1.0",
  # CMA-ES
  "evosax>=0.1.6",
  "cmaes>=0.10.0",
  # Utilities
  "tqdm",
  "pyyaml",
]

[project.urls]
Homepage = "https://github.com/andrewliu08/SPI-Active"

[tool.setuptools.packages.find]
include = ["pgdr*"]
